# container-use-web

./: .env.template  .gitignore  .npmignore  .pre-commit-config.yaml  LICENSE  PUBLISHING.md  README.md  build-cli.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.cli.json
.github/: copilot-instructions.md
.github/prompts/output/: apply.output  checkout.output  diff.output  help.output  list.output  log.output  merge.output  (+3 more)
.github/workflows/: ci.yml  release.yml  test-package.yml
backend/: .gitignore  build.mjs  constants.ts  deno.json  go.mod  main.go  main.ts  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
backend/app/: main.py  models.py
backend/app/api/: main.py  websockets.py
backend/app/api/routes/: environments.py
backend/app/core/: config.py  container_use.py
backend/models/: environment.ts  filesystem.ts
backend/routes/: environments.ts  files.ts
backend/src/: index.ts
backend/src/models/: environment.ts  filesystem.ts  git.ts
backend/src/routes/: environments.ts  files.ts  git.ts
backend/src/static/terminal/: index.html
backend/src/utils/: cli-executor.ts  constants.ts  parser.ts  terminal.ts
backend/utils/: parser.ts
cli/src/: cli.ts
frontend/: .gitignore  biome.json  index.html  nginx.conf  openapi.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx
scripts/: build.sh  free_port.sh  generate-client.sh  pre-publish.sh  publish.sh  release.sh  test-cli.sh  test-package.sh  test-ws.sh  test_ws.sh
src/: cli.ts
(+29 files in other folders)
