[project]
name = "backend"
version = "0.1.0"
description = "Container Use UI Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
